hot fix for text align on h2 elements

--- a/styles/sass/partials/_blog.scss
+++ b/styles/sass/partials/_blog.scss
@@ -15,6 +15,7 @@ h3 {
         margin-top: 200px;
         //to prevent clipping for smaller screen resolutions
         line-height: normal;
+        text-align: left;
     }
 
     h3 {
